--- a/docs/comparison.mdx
+++ b/docs/comparison.mdx
@@ -6,7 +6,7 @@ icon: "scale-balanced"
 
 # Browser MCP Server Comparison
 
-Benchmark date: 2026-02-19 | OpenBrowser MCP v0.1.21 (CodeAgent, 1 tool) | Playwright MCP (latest) | Chrome DevTools MCP (latest)
+Benchmark date: 2026-02-19 | OpenBrowser MCP v0.1.22 (CodeAgent, 1 tool) | Playwright MCP (latest) | Chrome DevTools MCP (latest)
 
 ## Overview
 
@@ -219,33 +219,25 @@ MCP tool response costs per 5-step workflow on a complex page (Wikipedia). These
 
 ### Methodology
 
-Six real-world browser tasks run through Claude Sonnet 4.6 on AWS Bedrock (Converse API). Each task uses a single MCP server as tool provider. The LLM decides which tools to call and when the task is complete. All tasks run against live websites.
+Six real-world browser tasks run through Claude Sonnet 4.6 on AWS Bedrock (Converse API) with a server-agnostic system prompt. Each task uses a single MCP server as tool provider. The LLM decides which tools to call and when the task is complete. All tasks run against live websites. Each server is benchmarked over 5 independent runs; statistics below report mean +/- standard deviation with 95% bootstrap confidence intervals (10,000 samples).
 
 **Tasks**: Wikipedia fact lookup, httpbin form fill, Hacker News data extraction, Wikipedia search + navigation, GitHub release lookup, example.com content analysis.
 
-### Results: Task Success
+<img src="/images/benchmark_comparison.png" alt="E2E LLM Benchmark: MCP Server Comparison" style={{width: "100%", maxWidth: 800}} />
 
-All three servers pass all 6 tasks.
+### Results: Task Success (N=5 runs)
 
-| Task | Playwright MCP | Chrome DevTools MCP | OpenBrowser MCP |
-|------|:-:|:-:|:-:|
-| fact_lookup | PASS | PASS | PASS |
-| form_fill | PASS | PASS | PASS |
-| multi_page_extract | PASS | PASS | PASS |
-| search_navigate | PASS | PASS | PASS |
-| deep_navigation | PASS | PASS | PASS |
-| content_analysis | PASS | PASS | PASS |
-| **Total** | **6/6** | **6/6** | **6/6** |
+All three servers achieve **100% pass rate** (6/6 tasks) across all 5 runs.
 
-### Results: Tool Calls and Duration
+### Results: Tool Calls and Duration (N=5 runs, mean +/- std)
 
 | Metric | Playwright MCP | Chrome DevTools MCP | OpenBrowser MCP |
 |--------|---------------:|--------------------:|----------------:|
-| **Total tool calls** | 10 | 21 | 20 |
-| **Avg tool calls/task** | 1.7 | 3.5 | 3.3 |
-| **Total duration** | 85.3s | 135.5s | 110.5s |
+| **Total tool calls** | 11.0 +/- 1.4 | 19.8 +/- 0.4 | 15.0 +/- 3.9 |
+| **Total duration** | 92.2 +/- 11.4s | 128.8 +/- 6.2s | 103.1 +/- 16.4s |
+| **95% CI (duration)** | 83.6 -- 101.0s | 123.9 -- 133.6s | 90.4 -- 115.8s |
 
-Playwright completes most tasks in 1 tool call because every navigation returns the full accessibility snapshot -- the LLM sees the entire page immediately and can answer without follow-up queries. OpenBrowser takes more turns because the LLM writes code to navigate, extract, and verify data step by step.
+Playwright completes most tasks in 1 tool call because every navigation returns the full accessibility snapshot -- the LLM sees the entire page immediately and can answer without follow-up queries. Chrome DevTools requires separate navigate + take_snapshot calls, resulting in more tool calls. OpenBrowser's CodeAgent batches navigation, extraction, and processing into single execute_code calls, achieving comparable speed with far fewer tokens.
 
 ### Results: Token Efficiency
 
@@ -352,7 +344,9 @@ Features no competitor offers:
 - Token usage measured from actual MCP tool response character counts in the benchmark logs
 - Playwright MCP tested via `npx @playwright/mcp@latest`
 - Chrome DevTools MCP tested via `npx -y chrome-devtools-mcp@latest`
-- OpenBrowser MCP v0.1.21 tested via `uvx openbrowser-ai[mcp]==0.1.21 --mcp`
+- OpenBrowser MCP v0.1.22 tested via `uvx openbrowser-ai[mcp]==0.1.22 --mcp`
+- Server-agnostic system prompt (no server-specific hints)
+- 5 independent runs per server with bootstrap confidence intervals (10,000 samples)
 - All tests run on macOS, M-series Apple Silicon
-- Benchmark script: `benchmarks/e2e_llm_benchmark.py`
-- Results: `benchmarks/e2e_llm_results.json`
+- Benchmark script: `benchmarks/e2e_llm_benchmark.py`, `benchmarks/e2e_llm_stats.py`
+- Results: `benchmarks/e2e_llm_stats_results.json`
